--- a/index.html
+++ b/index.html
@@ -1,15 +1,98 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>
-            Sunny Prakash
-        </title>
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js">
-        </script>
-    </head>
-    <body>
-        
-    </body>
+
+<head>
+    <title>
+        Sunny Prakash
+    </title>
+    <link rel="stylesheet" href="css/superslides.css">
+    <link rel="stylesheet" href="css/owl.carousel.min.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB"
+        crossorigin="anonymous">
+    <link rel="stylesheet" href="css/style.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js">
+    </script>
+</head>
+
+<body>
+
+    <div id="slides">
+        <div class="overlay"></div>
+
+        <div class="slides-container">
+            <img src="img/idea.jpeg" alt="">
+            <img src="img/coding.jpeg" alt="">
+            <img src="img/smartphone.jpeg" alt="">
+            <img src="img/smartphone2.jpeg" alt="">
+        </div>
+
+        <div class="titleMsg">
+            <div class="heading">
+                <p class="main">SUNNY PRAKASH</p>
+                <p class="sub typed"></p>
+            </div>
+        </div>
+
+        <nav class="slides-navigation">
+            <a href="#" class="next"></a>
+            <a href="#" class="prev"></a>
+        </nav>
+    </div>
+
+    <div id="about" class="section">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-5">
+                    <img class="aboutImage" src="img/sunny.jpg" alt="">
+                </div>
+                <div class="col-md-7">
+                    <h4>My name is Sunny Prakash</h4>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+                        Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
+                        when an unknown printer took a galley of type and scrambled it to make a 
+                        type specimen book. It has survived not only five centuries, but also the 
+                        leap into electronic typesetting, remaining essentially unchanged. 
+                    </p>
+                    <p>It was popularised in the 1960s with the release of Letraset sheets containing 
+                        Lorem Ipsum passages, and more recently with desktop publishing software like 
+                        Aldus PageMaker including versions of Lorem Ipsum.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div id="skills" class="skillSection section">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12 text-center">
+                        <h2>TECHNICAL SKILLS</h2>
+                        <p>A representation on my profiency in each skill</P>
+                    </div>
+                    <div class="owl-carousel owl-theme">
+                        <div class="skill">
+                            <span class="chart" data-percent="67">
+                                <span class="percent">67</span>
+                                <canvas height="152" width="152"></canvas>
+                            </span>
+                            <p>Java</p>
+                            <p>Used in most of my project</p>
+                        </div>        
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    <script src="js/jquery.superslides.min.js"></script>
+    <script src="js/jquery.easypiechart.js"></script>
+    <script src="js/owl.carousel.min.js"></script>
+    <script src="js/typed.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T"
+        crossorigin="anonymous"></script>
+
+    <script src="js/script.js"></script>
+</body>
+
 </html>
