--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     </title>
     <link rel="stylesheet" href="css/superslides.css">
     <link rel="stylesheet" href="css/owl.carousel.min.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB"
         crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
@@ -77,12 +78,111 @@
                             </span>
                             <p>Java</p>
                             <p>Used in most of my project</p>
-                        </div>        
+                        </div>    
+                        
+                        <div class="skill">
+                            <span class="chart" data-percent="70">
+                                <span class="percent">70</span>
+                                <canvas height="152" width="152"></canvas>
+                            </span>
+                            <p>HTML</p>
+                            <p>Used in most of my project</p>
+                        </div> 
+
+                        <div class="skill">
+                            <span class="chart" data-percent="80">
+                                <span class="percent">80</span>
+                                <canvas height="152" width="152"></canvas>
+                            </span>
+                            <p>Android</p>
+                            <p>Used in most of my project</p>
+                        </div> 
+
+                        <div class="skill">
+                            <span class="chart" data-percent="50">
+                                <span class="percent">50</span>
+                                <canvas height="152" width="152"></canvas>
+                            </span>
+                            <p>Angular</p>
+                            <p>Used in most of my project</p>
+                        </div> 
+
                     </div>
                 </div>
             </div>
-        </div>
+    </div>
 
+    <div id="stats" class="statsSection section">
+        <div class="container">
+            <div class="row">      
+                <div class="col-md-3 col-sm-6">
+                    <div class="squareItem">
+                        <div class="squareInnerContainer">
+                            <div class="squareIcon">
+                                <i class="fa fa-clock"></i>
+                            </div>
+                            <div class="squareContent">
+                                <h2 class="counter">100</h2>
+                                <h4>Years</h4>
+                            </div>
+                        </div>
+                    </div>
+                </div>     
+                <div class="col-md-3 col-sm-6">
+                    <div class="squareItem">
+                        <div class="squareInnerContainer">
+                            <div class="squareIcon">
+                                <i class="fa fa-clock"></i>
+                            </div>
+                            <div class="squareContent">
+                                <h2 class="counter">100</h2>
+                                <h4>Years</h4>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3 col-sm-6">
+                    <div class="squareItem">
+                        <div class="squareInnerContainer">
+                            <div class="squareIcon">
+                                <i class="fa fa-clock"></i>
+                            </div>
+                            <div class="squareContent">
+                                <h2 class="counter">5</h2>
+                                <h4>Years</h4>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3 col-sm-6">
+                    <div class="squareItem">
+                        <div class="squareInnerContainer">
+                            <div class="squareIcon">
+                                <i class="fa fa-clock"></i>
+                            </div>
+                            <div class="squareContent">
+                                <h2 class="counter">10</h2>
+                                <h4>Years</h4>
+                            </div>
+                        </div>
+                    </div>
+                </div>       
+            </div>
+        </div>
+    </div>
+
+    <div id="contact" class="contactSection section">
+        <div class="col-md-12 text-center">
+            <p class="subHeading">Like what you see?</p>
+            <h2>I'd love to hear from you</h2>
+            <a href="mailTo:sunny.prakashgm@gmail.com" class="contactButton">Get in touch!</a>
+        </div>
+    </div>
+
+
+
+    <script src="js/countUp.js"></script>
+    <script src="js/countUp-jquery.js"></script>
     <script src="js/jquery.superslides.min.js"></script>
     <script src="js/jquery.easypiechart.js"></script>
     <script src="js/owl.carousel.min.js"></script>
