Added portfolio section

--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     </title>
     <link rel="stylesheet" href="css/superslides.css">
     <link rel="stylesheet" href="css/owl.carousel.min.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp"
+        crossorigin="anonymous">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB"
         crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js">
-    </script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </head>
 
 <body>
@@ -48,15 +48,14 @@
                 </div>
                 <div class="col-md-7">
                     <h4>My name is Sunny Prakash</h4>
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
-                        Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
-                        when an unknown printer took a galley of type and scrambled it to make a 
-                        type specimen book. It has survived not only five centuries, but also the 
-                        leap into electronic typesetting, remaining essentially unchanged. 
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's
+                        standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled
+                        it to make a type specimen book. It has survived not only five centuries, but also the leap into
+                        electronic typesetting, remaining essentially unchanged.
                     </p>
-                    <p>It was popularised in the 1960s with the release of Letraset sheets containing 
-                        Lorem Ipsum passages, and more recently with desktop publishing software like 
-                        Aldus PageMaker including versions of Lorem Ipsum.
+                    <p>It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages,
+                        and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem
+                        Ipsum.
                     </p>
                 </div>
             </div>
@@ -64,57 +63,57 @@
     </div>
 
     <div id="skills" class="skillSection section">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-12 text-center">
-                        <h2>TECHNICAL SKILLS</h2>
-                        <p>A representation on my profiency in each skill</P>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12 text-center">
+                    <h2>TECHNICAL SKILLS</h2>
+                    <p>A representation on my profiency in each skill</P>
+                </div>
+                <div class="owl-carousel owl-theme">
+                    <div class="skill">
+                        <span class="chart" data-percent="67">
+                            <span class="percent">67</span>
+                            <canvas height="152" width="152"></canvas>
+                        </span>
+                        <p>Java</p>
+                        <p>Used in most of my project</p>
                     </div>
-                    <div class="owl-carousel owl-theme">
-                        <div class="skill">
-                            <span class="chart" data-percent="67">
-                                <span class="percent">67</span>
-                                <canvas height="152" width="152"></canvas>
-                            </span>
-                            <p>Java</p>
-                            <p>Used in most of my project</p>
-                        </div>    
-                        
-                        <div class="skill">
-                            <span class="chart" data-percent="70">
-                                <span class="percent">70</span>
-                                <canvas height="152" width="152"></canvas>
-                            </span>
-                            <p>HTML</p>
-                            <p>Used in most of my project</p>
-                        </div> 
 
-                        <div class="skill">
-                            <span class="chart" data-percent="80">
-                                <span class="percent">80</span>
-                                <canvas height="152" width="152"></canvas>
-                            </span>
-                            <p>Android</p>
-                            <p>Used in most of my project</p>
-                        </div> 
-
-                        <div class="skill">
-                            <span class="chart" data-percent="50">
-                                <span class="percent">50</span>
-                                <canvas height="152" width="152"></canvas>
-                            </span>
-                            <p>Angular</p>
-                            <p>Used in most of my project</p>
-                        </div> 
-
+                    <div class="skill">
+                        <span class="chart" data-percent="70">
+                            <span class="percent">70</span>
+                            <canvas height="152" width="152"></canvas>
+                        </span>
+                        <p>HTML</p>
+                        <p>Used in most of my project</p>
                     </div>
+
+                    <div class="skill">
+                        <span class="chart" data-percent="80">
+                            <span class="percent">80</span>
+                            <canvas height="152" width="152"></canvas>
+                        </span>
+                        <p>Android</p>
+                        <p>Used in most of my project</p>
+                    </div>
+
+                    <div class="skill">
+                        <span class="chart" data-percent="50">
+                            <span class="percent">50</span>
+                            <canvas height="152" width="152"></canvas>
+                        </span>
+                        <p>Angular</p>
+                        <p>Used in most of my project</p>
+                    </div>
+
                 </div>
             </div>
+        </div>
     </div>
 
     <div id="stats" class="statsSection section">
         <div class="container">
-            <div class="row">      
+            <div class="row">
                 <div class="col-md-3 col-sm-6">
                     <div class="squareItem">
                         <div class="squareInnerContainer">
@@ -127,7 +126,7 @@
                             </div>
                         </div>
                     </div>
-                </div>     
+                </div>
                 <div class="col-md-3 col-sm-6">
                     <div class="squareItem">
                         <div class="squareInnerContainer">
@@ -166,7 +165,7 @@
                             </div>
                         </div>
                     </div>
-                </div>       
+                </div>
             </div>
         </div>
     </div>
@@ -179,7 +178,106 @@
         </div>
     </div>
 
-
+    <div id="portfolio" class="portfolioSection section">
+        <div class="container">
+            <div class="row">
+                <div class="heading">
+                    <h2>Portfolio</h2>
+                </div>
+                <div class="filter">
+                    <ul id="filters">
+                        <li>
+                            <a href="#" data-filter="*" class="current">All</a>
+                        </li>
+                        <li>
+                            <a href="#" data-filter=".apps">Apps</a>
+                        </li>
+                        <li>
+                            <a href="#" data-filter=".jee">J2EE</a>
+                        </li>
+                        <li>
+                            <a href="#" data-filter=".web">Web</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="itemsContiner">
+                    <ul class="items">
+                        <li class="apps col-xs-6 col-sm-4 col-md-3 col-lg-3">
+                            <div class="item">
+                                <img src="img/portfolio/thumbnails/idea_thumb.jpg">
+                                <button class="btn">
+                                    <i class="fa fa-search"></i>
+                                </button>
+                                <div class="imageOverlay"></div>
+                            </div>
+                        </li>
+                        <li class="jee col-xs-6 col-sm-4 col-md-3 col-lg-3">
+                            <div class="item">
+                                <img src="img/portfolio/thumbnails/idea_thumb.jpg">
+                                <button class="btn">
+                                    <i class="fa fa-search"></i>
+                                </button>
+                                <div class="imageOverlay"></div>
+                            </div>
+                        </li>
+                        <li class="web col-xs-6 col-sm-4 col-md-3 col-lg-3">
+                            <div class="item">
+                                <img src="img/portfolio/thumbnails/idea_thumb.jpg">
+                                <button class="btn">
+                                    <i class="fa fa-search"></i>
+                                </button>
+                                <div class="imageOverlay"></div>
+                            </div>
+                        </li>
+                        <li class="web col-xs-6 col-sm-4 col-md-3 col-lg-3">
+                            <div class="item">
+                                <img src="img/portfolio/thumbnails/idea_thumb.jpg">
+                                <button class="btn">
+                                    <i class="fa fa-search"></i>
+                                </button>
+                                <div class="imageOverlay"></div>
+                            </div>
+                        </li>
+                        <li class="apps col-xs-6 col-sm-4 col-md-3 col-lg-3">
+                                <div class="item">
+                                    <img src="img/portfolio/thumbnails/idea_thumb.jpg">
+                                    <button class="btn">
+                                        <i class="fa fa-search"></i>
+                                    </button>
+                                    <div class="imageOverlay"></div>
+                                </div>
+                            </li>
+                        <li class="web col-xs-6 col-sm-4 col-md-3 col-lg-3">
+                            <div class="item">
+                                <img src="img/portfolio/thumbnails/idea_thumb.jpg">
+                                <button id="btn6" type="button" class="btn" data-toggle="modal" data-target="#m6">
+                                    <i class="fa fa-search"></i>
+                                </button>
+                                <div id="m6" class="modal">
+                                    <div class="modal-dialog">
+                                        <div class="modal-content">
+                                            <div class="modal-header">
+                                                <h4 class="modal-title">Modal Heading</h4>
+                                                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                                            </div>
+                                            <div class="modal-body">
+                                                <p>Some text will appear here sddgjkahsdfjsdkfkbsdkfsdgjhkdfasdfsfdksjdfkljslfksdfd</p>
+                                            </div>
+                                            <div class="modal-footer">
+                                                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    
+                                </div>
+                                <div class="imageOverlay"></div>
+                            </div>  
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <script src="js/countUp.js"></script>
     <script src="js/countUp-jquery.js"></script>
@@ -191,7 +289,7 @@
         crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T"
         crossorigin="anonymous"></script>
-
+    <script src="https://unpkg.com/isotope-layout@3.0.6/dist/isotope.pkgd.min.js"></script>
     <script src="js/script.js"></script>
 </body>
 
