--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.8/css/all.css" integrity="sha384-3AB7yXWz4OeoZcPbieVW64vVXEwADiYyAEhwilzWsLw+9FgqpyjjStpPnpBO8o8S"
         crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.2.5/jquery.fancybox.min.css" />
-
+    <link href="https://fonts.googleapis.com/css?family=Concert+One|Satisfy" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/style.css">
 
 
@@ -36,22 +36,15 @@
 
         <div class="titleMessage">
             <div class="heading">
-                <p class="main">REECE KENNEY</p>
+                <p class="main">SUNNY PRAKASH</p>
                 <p class="sub typed"></p>
             </div>
         </div>
 
-
-        <nav class="slides-navigation">
-            <a href="#" class="next"></a>
-            <a href="#" class="prev"></a>
-        </nav>
-
-
     </div>
 
     <nav id="navigation" class="navbar navbar-expand-lg">
-        <a class="navbar-brand" href="#">Welcome</a>
+        <a class="navbar-brand" href="#"><i class="fa fa-home"></i></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
             aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -64,17 +57,18 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#skills">Skillset</a>
+                    <a class="nav-link" href="#skills">Skills</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#stats">Stats</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#contact">Contact</a>
-                </li>
-                <li class="nav-item">
                     <a class="nav-link" href="#portfolio">Portfolio</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#contact">Contact me</a>
+                </li>
+                
             </ul>
         </div>
     </nav>
@@ -85,24 +79,46 @@
 
             <div class="row">
 
-                <div class="col-md-5">
-                    <img class="aboutImage" src="img/about.jpeg">
+                <div class="col-md-4 card">
+                    <img class="aboutImage" src="img/about.jpg">
+                    <div class="myName">
+                        <h3><b>Sunny Prakash</b></h3>
+                        <p>Web Developer</p>
+                    </div>
                 </div>
-
-                <div class="col-md-7">
-
-
-                    <h4>My name is Reece Kenney</h4>
-
-                    <p>Hi there! I'm Reece Kenney from Rugby, England. I currently work as a Software Engineer at Microsoft. I
-                        have many years experience creating software, mobile apps and websites for both myself, and for clients.
-                        I have experience programming in many different languages such as C, C++, C#, Java, PHP and Objective-C,
-                        however some of my favourite projects involve working in Swift for iOS.</p>
-                    <p>I graduated from university in Leeds, England with first class honours (4.0 GPA) in Computer Science and
-                        also spent a year studying computer science at Purdue University in Indiana, USA. </p>
-
+                
+                <div class="col-md-7 card offset-md-1" style="padding-left:20px;">
+                    <h3>A lit'l intoduction...</h3>
+                    <p>Hi there! I'm Sunny Prakash from Patna, India. I am currently working as a Java developer at Cognizant Technology Solutions. I
+                        have 3+ years of experience software service industry, mobile apps and websites for both myself, and for clients.
+                        I have good grasp and hands-on experience in Java and Front-end/UI technologies mentioned below -
+                    </p>
+                    <ul>
+                        <li><strong>Frameworks: </strong>Spring, Hibernate/JPA, Angular 4, Bootstrap</li>
+                        <li><strong>Tools: </strong>Android Studio, Eclipse, Postman, IntelliJ, VS Code</li>
+                        <li><strong>Web tech: </strong>HTML, CSS, Javascript, JQuery, Maven</li>
+                        <li><strong>Database: </strong>Oracle 11g, Sqlite, MySQL</li>
+                        <li><strong>Servers: </strong>Apache Tomcat</li>
+                        <li><strong>Methodologies: </strong>Kanban</li>
+                    </ul>
+                    <h5>Academics</h5>    
+                    <p>I graduated from Birla Institute of Technology, Mesra with first class (CGPA 7.64) 
+                       in Electronics & Communication.
+                    </p>
+                    <h5>Certifications</h5>
+                    <ul>
+                        <li>COGNIZANT CERTIFIED PROFESSIONAL – General Insurance.</li>
+                        <li>Successfully completed Power searching with Google course 2012.</li>
+                    </ul>
+                    <h5>I do have hobbies</h5>
+                    <ul>
+                        <li>Worked as a volunteer for Outreach Cognizant</li>
+                        <li>Ever lasting apetite for new tech and gadgets</li>
+                        <li>Big time Anime lover</li>
+                        <li>Bathroom singer</li>
+                        <li>Exothermic activities like Cricket and Tabel Tennies</li>
+                    </ul>
                 </div>
-
             </div>
 
         </div>
@@ -124,33 +140,48 @@
                 <div class="owl-carousel owl-theme">
 
                     <div class="skill">
-                        <span class="chart" data-percent="67">
-                            <span class="percent">67</span>
+                        <span class="chart" data-percent="80">
+                            <span class="percent">80</span>
                             <canvas height="152" width="152"></canvas>
                         </span>
-                        <h4>PHP</h4>
-                        <p>Used in most of my web based projects</p>
+                        <h4>Java</h4>
+                        <p>Current project and Android apps</p>
                     </div>
 
-
                     <div class="skill">
-                        <span class="chart" data-percent="90">
-                            <span class="percent">90</span>
+                        <span class="chart" data-percent="70">
+                            <span class="percent">70</span>
                             <canvas height="152" width="152"></canvas>
                         </span>
                         <h4>HTML</h4>
-                        <p>Used in most of my web based projects</p>
+                        <p>Web desiging projects</p>
                     </div>
 
-
-
                     <div class="skill">
-                        <span class="chart" data-percent="30">
-                            <span class="percent">30</span>
+                        <span class="chart" data-percent="70">
+                            <span class="percent">70</span>
                             <canvas height="152" width="152"></canvas>
                         </span>
-                        <h4>MySQL</h4>
-                        <p>Used in most of my web based projects</p>
+                        <h4>CSS</h4>
+                        <p>Web desiging projects</p>
+                    </div>
+
+                    <div class="skill">
+                            <span class="chart" data-percent="75">
+                                <span class="percent">75</span>
+                                <canvas height="152" width="152"></canvas>
+                            </span>
+                            <h4>Javascript</h4>
+                            <p>Used in most of my web based projects</p>
+                    </div>
+
+                    <div class="skill">
+                            <span class="chart" data-percent="60">
+                                <span class="percent">60</span>
+                                <canvas height="152" width="152"></canvas>
+                            </span>
+                            <h4>MySql</h4>
+                            <p>Database and queries</p>
                     </div>
 
 
@@ -178,8 +209,8 @@
                                 <i class="fa fa-clock"></i>
                             </div>
                             <div class="squareContent">
-                                <h2 class="counter">4</h2>
-                                <h3>Years Experience</h3>
+                                <h2 class="counter plus">3</h2>
+                                <h3>Years of experience</h3>
                             </div>
                         </div>
                     </div>
@@ -189,11 +220,11 @@
                     <div class="squareItem">
                         <div class="squareInnerContainer">
                             <div class="squareIcon">
-                                <i class="fa fa-calendar"></i>
+                                <i class="fab fa-android"></i>
                             </div>
                             <div class="squareContent">
-                                <h2 class="counter">137</h2>
-                                <h3>Clients</h3>
+                                <h2 class="counter">2</h2>
+                                <h3>Android Apps</h3>
                             </div>
                         </div>
                     </div>
@@ -203,11 +234,11 @@
                     <div class="squareItem">
                         <div class="squareInnerContainer">
                             <div class="squareIcon">
-                                <i class="fa fa-bolt"></i>
+                                <i class="fa fa-briefcase"></i>
                             </div>
                             <div class="squareContent">
-                                <h2 class="counter">18</h2>
-                                <h3>iOS Apps</h3>
+                                <h2 class="counter">7</h2>
+                                <h3>Projects</h3>
                             </div>
                         </div>
                     </div>
@@ -217,10 +248,10 @@
                     <div class="squareItem">
                         <div class="squareInnerContainer">
                             <div class="squareIcon">
-                                <i class="fa fa-cloud"></i>
+                                <i class="fab fa-chrome"></i>
                             </div>
                             <div class="squareContent">
-                                <h2 class="counter">58</h2>
+                                <h2 class="counter">2</h2>
                                 <h3>Websites Made</h3>
                             </div>
                         </div>
@@ -234,19 +265,7 @@
 
     </div>
 
-    <div id="contact" class="contactSection section">
-
-        <div class="col-md-12 text-center">
-
-            <p class="subHeading">Like what you see?</p>
-            <h2>I'd love to hear from you!</h2>
-            <a href="mailTo:reece@gmail.com" class="contactButton">GET IN TOUCH!</a>
-
-        </div>
-
-    </div>
-
-    <div id="portfolio" class="section">
+    <div id="portfolio" class="portfolioSection section">
 
         <div class="container">
 
@@ -298,6 +317,9 @@
                                 </div>
 
                                 <div class="imageOverlay"></div>
+                                <div class="subject">
+                                    <p>Connect 3</p>
+                                </div>
 
                             </div>
 
@@ -319,6 +341,9 @@
                                 </div>
 
                                 <div class="imageOverlay"></div>
+                                <div class="subject">
+                                    <p>Connect 3</p>
+                                </div>
 
                             </div>
 
@@ -340,6 +365,9 @@
                                 </div>
 
                                 <div class="imageOverlay"></div>
+                                <div class="subject">
+                                    <p>Connect 3</p>
+                                </div>
 
                             </div>
 
@@ -361,6 +389,9 @@
                                 </div>
 
                                 <div class="imageOverlay"></div>
+                                <div class="subject">
+                                    <p>Connect 3</p>
+                                </div>
 
                             </div>
 
@@ -382,6 +413,9 @@
                                 </div>
 
                                 <div class="imageOverlay"></div>
+                                <div class="subject">
+                                    <p>Connect 3</p>
+                                </div>
 
                             </div>
 
@@ -404,6 +438,9 @@
                                 </div>
 
                                 <div class="imageOverlay"></div>
+                                <div class="container" id = "subject">
+                                    <p>Connect 3</p>
+                                </div>
 
                             </div>
 
@@ -415,6 +452,18 @@
                 </div>
 
             </div>
+
+        </div>
+
+    </div>
+
+    <div id="contact" class="contactSection section">
+
+        <div class="col-md-12 text-center">
+
+            <p class="subHeading">Like what you see?</p>
+            <h2>I'd love to hear from you!</h2>
+            <a href="mailTo:reece@gmail.com" class="contactButton">GET IN TOUCH!</a>
 
         </div>
 
