--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>My Portfolio</title>
+    <title>Sunny Prakash</title>
     <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="stylesheet" type="text/css" href="css/superslides.css">
