spelling mistakes corrected.

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                             <strong>Methodologies: </strong>Kanban</li>
                     </ul>
                     <h5 id="intro" style="margin-top:0px;">&nbsp;Academics</h5>
-                    <p>I graduated from Birla Institute of Technology, Mesra with first class (CGPA 7.64) in Electronics & Communication.
+                    <p>I did my graduation from Birla Institute of Technology, Mesra with first class (CGPA 7.64) in Electronics & Communication.
                     </p>
                     <h5 id="intro" style="margin-top:0px;">&nbsp;Certifications</h5>
                     <ul>
@@ -124,10 +124,10 @@
                     <h5 id="intro" style="margin-top:0px;">&nbsp;I do have hobbies</h5>
                     <ul>
                         <li>Worked as a volunteer for Outreach Cognizant</li>
-                        <li>Ever lasting apetite for new tech and gadgets</li>
+                        <li>Never ending appetite for new technologies and gadgets</li>
                         <li>Big time Anime lover</li>
                         <li>Bathroom singer</li>
-                        <li>Exothermic activities like Cricket and Tabel Tennies</li>
+                        <li>Exothermic activities like Cricket and Table Tennis</li>
                     </ul>
                 </div>
             </div>
@@ -147,7 +147,6 @@
                     <p>A representation of my proficiency in each skill</p>
                 </div>
 
-
                 <div class="owl-carousel owl-theme">
 
                     <div class="skill">
@@ -165,7 +164,7 @@
                             <canvas height="152" width="152"></canvas>
                         </span>
                         <h4>HTML</h4>
-                        <p>Web desiging projects</p>
+                        <p>Web designing projects</p>
                     </div>
 
                     <div class="skill">
@@ -174,7 +173,7 @@
                             <canvas height="152" width="152"></canvas>
                         </span>
                         <h4>CSS</h4>
-                        <p>Web desiging projects</p>
+                        <p>Web designing projects</p>
                     </div>
 
                     <div class="skill">
@@ -192,7 +191,7 @@
                             <canvas height="152" width="152"></canvas>
                         </span>
                         <h4>Angular</h4>
-                        <p>Good grasp to the basics</p>
+                        <p>Good grasp of the basics</p>
                     </div>
 
                     <div class="skill">
@@ -244,7 +243,7 @@
                             </div>
                             <div class="squareContent">
                                 <h2 class="counter">1</h2>
-                                <h3>Android Apps</h3>
+                                <h3>Android App</h3>
                             </div>
                         </div>
                     </div>
@@ -481,7 +480,7 @@
 
             <p class="subHeading">Like what you see?</p>
             <h2>I'd love to hear from you!</h2>
-            <a href="mailTo:reece@gmail.com" class="contactButton">GET IN TOUCH</a>
+            <a href="mailTo:sunny.prakashgm@gmail.com" class="contactButton">GET IN TOUCH</a>
         </div>
 
         <div class="col-md-12 text-center" style="top:30px;">
