--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                 </div>
 
                 <div class="col-md-7 card offset-md-1" style="padding-left:20px;">
-                    <h3 id="intro">&nbsp;A lit'l intoduction...</h3>
+                    <h3 id="intro">&nbsp;A li'l intoduction...</h3>
                     <p>Hi there! I'm Sunny Prakash from Patna, India. I am currently working as a Java developer at Cognizant
                         Technology Solutions. I have 3+ years of experience software service industry, mobile apps and websites
                         for both myself, and for clients. I have good grasp and hands-on experience in Java and Front-end/UI
@@ -533,8 +533,8 @@
                 <h4 class="modal-title">Connect 3</h4>
             </div>
             <div class="modal-body">
-                <p>Connect 3 is 3x3 classic TIc Tac Toe board game. the player who succeeds in placing three of their marks
-                    in a horizontal, vertical or diagonal row wins the game. Currently this app is available on Play store.
+                <p>Connect 3 is 3x3 classic Tic Tac Toe board game. the player who succeeds in placing three of their marks
+                    in a horizontal, vertical or diagonal row wins the game. Currently this app is available in Play store.
                     Because of its responsive layout it is suitable for Phone and tablets. it features -</p>
                 <ul>
                     <li>1 player(Easy 😪, Bookworm 🤓, Smart mode 😎)</li>
