--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
 
 <head>
+    <link rel="shortcut icon" href="img/icons/title.ico" type="image/x-icon">
+    <link rel="icon" href="img/icons/title.ico" type="image/x-icon">
     <title>Sunny Prakash</title>
     <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
 
