--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
                 <div class="col-md-4 card">
                     <img class="aboutImage" src="img/about.jpg">
-                    <div class="myName">
+                    <div class="myName textColor">
                         <h3>
                             <b>Sunny Prakash</b>
                         </h3>
@@ -96,12 +96,12 @@
 
                 <div class="col-md-7 card offset-md-1" style="padding-left:20px;">
                     <h3 id="intro">&nbsp;A li'l intoduction...</h3>
-                    <p>Hi there! I'm Sunny Prakash from Patna, India. I am currently working as a Java developer at Cognizant
+                    <p class="textColor">Hi there! I'm Sunny Prakash from Patna, India. I am currently working as a Java developer at Cognizant
                         Technology Solutions. I have 3+ years of experience software service industry, mobile apps and websites
                         for both myself, and for clients. I have good grasp and hands-on experience in Java and Front-end/UI
                         technologies mentioned below -
                     </p>
-                    <ul>
+                    <ul class="textColor">
                         <li>
                             <strong>Frameworks: </strong>Spring, Hibernate/JPA, Angular 4, Bootstrap</li>
                         <li>
@@ -116,15 +116,15 @@
                             <strong>Methodologies: </strong>Kanban</li>
                     </ul>
                     <h5 id="intro" style="margin-top:0px;">&nbsp;Academics</h5>
-                    <p>I did my graduation from Birla Institute of Technology, Mesra with first class (CGPA 7.64) in Electronics & Communication.
+                    <p class="textColor">I did my graduation from Birla Institute of Technology, Mesra with first class (CGPA 7.64) in Electronics & Communication.
                     </p>
                     <h5 id="intro" style="margin-top:0px;">&nbsp;Certifications</h5>
-                    <ul>
+                    <ul class="textColor">
                         <li>COGNIZANT CERTIFIED PROFESSIONAL – General Insurance.</li>
                         <li>Successfully completed Power searching with Google course 2012.</li>
                     </ul>
                     <h5 id="intro" style="margin-top:0px;">&nbsp;I do have hobbies</h5>
-                    <ul>
+                    <ul class="textColor">
                         <li>Worked as a volunteer for Outreach Cognizant</li>
                         <li>Never ending appetite for new technologies and gadgets</li>
                         <li>Big time Anime lover</li>
@@ -476,7 +476,7 @@
 
     </div>
 
-    <div id="contact" class="contactSection">
+    <div id="contact" class="contactSection textColor">
 
         <div class="col-md-12 text-center">
 
@@ -499,9 +499,6 @@
                 <i class="fab fa-twitter-square"></i>
             </a>
         </div>
-
-
-
     </div>
 
     <div class="copyrightSection">
@@ -530,7 +527,7 @@
 
 <div class="modal fade" id="preview" role="dialog">
     <div class="modal-dialog">
-        <div class="modal-content">
+        <div class="modal-content textColor">
             <div class="modal-header">
                 <h4 class="modal-title">Connect 3</h4>
             </div>
@@ -559,7 +556,7 @@
 
 <div class="modal fade" id="preview2" role="dialog">
     <div class="modal-dialog">
-        <div class="modal-content">
+        <div class="modal-content textColor">
             <div class="modal-header">
                 <h4 class="modal-title">Pac-Man</h4>
             </div>
@@ -578,7 +575,7 @@
 
 <div class="modal fade" id="preview3" role="dialog">
     <div class="modal-dialog">
-        <div class="modal-content">
+        <div class="modal-content textColor">
             <div class="modal-header">
                 <h4 class="modal-title">Tribute to the Missile-Man of India</h4>
             </div>
@@ -597,7 +594,7 @@
 
 <div class="modal fade" id="preview4" role="dialog">
     <div class="modal-dialog">
-        <div class="modal-content">
+        <div class="modal-content textColor">
             <div class="modal-header">
                 <h4 class="modal-title">Product Management</h4>
             </div>
@@ -618,7 +615,7 @@
 
 <div class="modal fade" id="preview5" role="dialog">
     <div class="modal-dialog">
-        <div class="modal-content">
+        <div class="modal-content textColor">
             <div class="modal-header">
                 <h4 class="modal-title">Customer Relationship Management</h4>
             </div>
@@ -639,7 +636,7 @@
 
 <div class="modal fade" id="preview7" role="dialog">
     <div class="modal-dialog">
-        <div class="modal-content">
+        <div class="modal-content textColor">
             <div class="modal-header">
                 <h4 class="modal-title">My Portfolio Website</h4>
             </div>
