Resume link attached.

--- a/index.html
+++ b/index.html
@@ -482,7 +482,8 @@
 
             <p class="subHeading">Like what you see?</p>
             <h2>I'd love to hear from you!</h2>
-            <a href="mailTo:sunny.prakashgm@gmail.com" class="contactButton">GET IN TOUCH</a>
+            <a href="mailTo:sunny.prakashgm@gmail.com" class="contactButton">SHOOT A MAIL</a>
+            <a href="https://1drv.ms/b/s!Av6QXw9NuDHdjyTwKzoMbYHifaK7" target="_blank" class="contactButton">MY RESUME</a>
         </div>
 
         <div class="col-md-12 text-center" style="top:30px;">
